Update and rename 6.9 (latihan) tebakAngka.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="tebakAngka.js"></script>
+    <script src="6.9 (latihan) tebakAngka.js"></script>
   </body>
 </html>
